DFHack Future
    Internals
    Fixes
    New Plugins
    New Scripts
    Misc Improvements

DFHack 0.40.19-r1
    Internals:
    Fixes:
        typo fix in modtools/reaction-trigger
        modtools/item-trigger should now work with item types
    New plugins:
        savestock and loadstock: two commands for saving and loading
          stockpile settings to a file. They can be used to migrate stockpile
          settings between worlds and saves.
    New scripts:
        remove-stress [all]: set selected or all units unit to -1,000,000 stress
          this script replaces removebadthoughts.rb
    Misc improvements:
        cmd-prompt can now access selected items, units, and buildings
        autolabor plugin: add an optional talent pool parameter

DFHack 0.40.16-r1
    Internals:
        EventManager should handle INTERACTION triggers a little better. It still can get confused about who did what but only rarely.
        EventManager should no longer trigger REPORT events for old reports after loading a save.
        lua/persist-table.lua: a convenient way of using persistent tables of arbitrary structure and dimension in Lua
    Fixes:
        mousequery: Disabled when linking levers
        stocks: Melting should work now
        scripts/full-heal: Updated with proper argument handling.
        scripts/modtools/reaction-trigger-transition.lua
            should produce the correct syntax now
        scripts/superdwarf.rb should work better now
        scripts/forum-dwarves.lua
            update for new df-structures changes
    New scripts:
        scripts/
            adaptation.rb
                view or set the cavern adaptation level of your citizens
            add-thought.lua
                allows the user to add thoughts to creatures.
            gaydar.lua
                detect the sexual orientation of units on the map
            markdown.lua
                Save a copy of a text screen in markdown (for reddit among others).
            devel/